# simGLTF

./: .gitmodules  CMakeLists.txt  README.md  callbacks.xml  license.txt  plugin.cpp  plugin.h  simAddOnFunc_gltfExporter.lua  simAddOnGLTF animation exporter.lua  simAddOnGLTF exporter.lua  simAddOnGLTFAnimationExporter.lua  simAddOnGLTFExporter.lua  simGLTF.lua
addOns/: GLTF animation exporter.lua  GLTF exporter.lua
sourceCode/: callbacks.xml  plugin.cpp
tests/: test1.ttt
